--- a/docs/languages/_category_.json
+++ b/docs/languages/_category_.json
@@ -2,6 +2,7 @@
   "label": "Languages",
   "position": 4,
   "link": {
-    "type": "generated-index"
+    "type": "generated-index",
+    "description": "Learn how to use Deriv websocker API features with your Language of your choice"
   }
 }
