--- a/docs/languages/javascript/_category_.json
+++ b/docs/languages/javascript/_category_.json
@@ -2,6 +2,7 @@
   "label": "Javascript",
   "position": 1,
   "link": {
-    "type": "generated-index"
+    "type": "generated-index",
+    "description": "Learn how to use Deriv Websocket APIs with Javascript and HTML & CSS"
   }
 }
