--- a/docs/languages/_category_.json
+++ b/docs/languages/_category_.json
@@ -1,8 +1,8 @@
 {
   "label": "Languages",
-  "position": 4,
+  "position": 2,
   "link": {
     "type": "generated-index",
-    "description": "Learn how to use Deriv websocker API features with your Language of your choice"
+    "description": "Learn how to use Deriv websocket API features with your Language of your choice"
   }
 }
