chore: update route for api explorere

--- a/docs/code-examples/javascript/ticks/index.mdx
+++ b/docs/code-examples/javascript/ticks/index.mdx
@@ -25,4 +25,4 @@ We'll start with the ticks example because it's a pretty simple block of code to
 
 A tick is a measure of minimum upward or downward movement in the price of a trading commodity. We subscribe to the ticks functionality from the Deriv API websocket, which will return new tick data every second. As an example you could create an interactive tick graph with this data.
 
-You can find other available calls in the the [API Explorer](/apiexplorer).
+You can find other available calls in the the [API Explorer](/api-explorer).
