--- a/docs/languages/javascript/_category_.json
+++ b/docs/languages/javascript/_category_.json
@@ -1,8 +1,8 @@
 {
-  "label": "Javascript",
+  "label": "JavaScript",
   "position": 1,
   "link": {
     "type": "generated-index",
-    "description": "Learn how to use Deriv Websocket APIs with Javascript and HTML & CSS"
+    "description": "Learn how to use Deriv Websocket APIs with JavaScript."
   }
 }
