--- a/docs/languages/javascript/_category_.json
+++ b/docs/languages/javascript/_category_.json
@@ -3,6 +3,6 @@
   "position": 1,
   "link": {
     "type": "generated-index",
-    "description": "Learn how to use Deriv Websocket APIs with JavaScript."
+    "description": "Learn how to use Deriv WebSocket APIs with JavaScript."
   }
 }
