chore: seo updates

--- a/docs/code-examples/javascript/contracts-for-symbol/index.mdx
+++ b/docs/code-examples/javascript/contracts-for-symbol/index.mdx
@@ -13,7 +13,7 @@ keywords:
   - example
   - contracts
   - symbol
-description: Contracts for Symbol code example
+description: Add a list of market symbols and their latest barrier and duration limits to your trading app with this API example.
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
