--- a/docs/code-examples/javascript/keep-alive/index.mdx
+++ b/docs/code-examples/javascript/keep-alive/index.mdx
@@ -13,7 +13,7 @@ keywords:
   - example
   - keep
   - alive
-description: Keep Alive code example
+description: With this API example, learn how to keep a connection alive when getting contract proposals via the Deriv API.
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
