--- a/docs/code-examples/javascript/proposal/index.mdx
+++ b/docs/code-examples/javascript/proposal/index.mdx
@@ -11,7 +11,7 @@ keywords:
   - code
   - example
   - proposal
-description: Proposal code example
+description: Learn how to feature the spot price, payout, and spot value for trading contracts with this API example.
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
