--- a/docs/code-examples/javascript/ticks-history/index.mdx
+++ b/docs/code-examples/javascript/ticks-history/index.mdx
@@ -13,7 +13,7 @@ keywords:
   - example
   - ticks
   - history
-description: Ticks History code example
+description: Subscribe to Deriv API's ticks history feature to get past tick times and prices. Integrate this feature into your trading app with this API example.
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
