--- a/docs/code-examples/javascript/website-status/index.mdx
+++ b/docs/code-examples/javascript/website-status/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Website Status
+title: Request Website Status
 draft: false
 sidebar_label: Website Status
 sidebar_position: 5
@@ -13,7 +13,7 @@ keywords:
   - example
   - website
   - status
-description: Website Status code example
+description: Explore settings like call limits, currency information, and supported languages through a website status request. Learn with this API example.
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
