--- a/docs/code-examples/javascript/active-symbols/index.mdx
+++ b/docs/code-examples/javascript/active-symbols/index.mdx
@@ -13,7 +13,7 @@ keywords:
   - example
   - active
   - symbols
-description: Active Symbols code example
+description: Learn how to add active symbols and market information to your trading app with an API example.
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
