--- a/docs/code-examples/javascript/ticks/index.mdx
+++ b/docs/code-examples/javascript/ticks/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Ticks
+title: Tick Call
 draft: false
 sidebar_label: Ticks
 sidebar_position: 1
@@ -11,7 +11,7 @@ keywords:
   - code
   - example
   - ticks
-description: Ticks code example
+description: Check out an API example of a tick call connected to an API WebSocket. Start building your trading app today!
 ---
 
 import SandboxIframe from '@site/src/components/SandboxIframe';
