--- a/docs/languages/_category_.json
+++ b/docs/languages/_category_.json
@@ -1,8 +1,9 @@
 {
+  "title": "Programming Languages",
   "label": "Languages",
   "position": 4,
   "link": {
     "type": "generated-index",
-    "description": "Learn how to use Deriv WebSocket API features with your language of your choice"
+    "description": "Select your preferred programming language to create a trading app with the help of our WebSocket API. Start learning with these code examples."
   }
 }
