--- a/docs/languages/_category_.json
+++ b/docs/languages/_category_.json
@@ -1,6 +1,5 @@
 {
-  "title": "Programming Languages",
-  "label": "Languages",
+  "label": "Programming Languages",
   "position": 4,
   "link": {
     "type": "generated-index",
