fix: intro to quickstart change

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,12 +1,12 @@
 ---
-title: Quick Start
+title: Quick start
 hide_title: false
 draft: false
 sidebar_label: Quickstart
 sidebar_position: 0
 sidebar_class_name: hide-sidebar-item
 tags:
-  - Quick Start
+  - Quick start
   - getting started
   - quick startup
 keywords:
