chore: seo updates documentaton

--- a/docs/code-examples/javascript/contracts-for-symbol/index.mdx
+++ b/docs/code-examples/javascript/contracts-for-symbol/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contracts for Symbol
+title: Contracts for symbols
 draft: false
 sidebar_label: Contracts for Symbol
 sidebar_position: 4
