--- a/docs/languages/_category_.json
+++ b/docs/languages/_category_.json
@@ -3,7 +3,7 @@
   "position": 4,
   "link": {
     "type": "generated-index",
-    "title": "Programming Languages | Deriv API",
+    "title": "Programming languages",
     "description": "Select your preferred programming language to create a trading app with the help of our WebSocket API. Start learning with these code examples."
   }
 }
