chore: add quick start doc for fr and es

--- a/i18n/es/docusaurus-plugin-content-docs/current/intro.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/intro.mdx
@@ -22,7 +22,7 @@ Nuestra documentación está dividida en varias secciones:
 - [Ejemplos de código](category/code-examples)
 - [Lenguajes](category/languages)
 - [Guías](category/guides)
-- [Configurar una aplicación deriv](/docs/setting-up-a-deriv-application.md)
+- [Configurar una aplicación deriv](/docs/setting-up-a-deriv-application)
 
 ### Inicio rápido
 
