--- a/i18n/fr/docusaurus-plugin-content-docs/current/intro.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/intro.mdx
@@ -22,7 +22,7 @@ Notre documentation est répartie en plusieurs sections :
 - [Exemples de code](category/code-examples)
 - [Langages](category/languages)
 - [Guides](category/guides)
-- [Configuration d'une application Deriv](/docs/setting-up-a-deriv-application.md)
+- [Configuration d'une application Deriv](/docs/setting-up-a-deriv-application)
 
 ### Démarrage rapide
 
