chore: trigger the translation flow

--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -1,7 +1,7 @@
 {
   "version.label": {
     "message": "Next",
-    "description": "The label for version current"
+    "description": "The label for version current."
   },
   "sidebar.tutorialSidebar.category.Core concepts": {
     "message": "Core concepts",
